--- a/Data wrangling - Capstone 2.ipynb
+++ b/Data wrangling - Capstone 2.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "8c65a088",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "186dcf08",
    "metadata": {},
    "outputs": [
@@ -259,7 +259,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "47d80b27",
    "metadata": {},
    "outputs": [
@@ -561,7 +561,7 @@
        "max            7.000000e+00  9.900000e+01  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "858afe7c",
    "metadata": {},
    "outputs": [
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "8c7551b6",
    "metadata": {},
    "outputs": [
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "23bf2ad3",
    "metadata": {
     "scrolled": true
@@ -652,13 +652,12 @@
    "source": [
     "# create subset of columns of binary variables from dataframe and check for missing values\n",
     "binary_columns = ['SEX', 'PATIENT_TYPE','INTUBED', 'PNEUMONIA', 'PREGNANT', 'DIABETES', 'COPD', 'ASTHMA', \n",
-    "                  'INMSUPR', 'HIPERTENSION', 'OTHER_DISEASE', 'CARDIOVASCULAR','OBESITY','RENAL_CHRONIC', 'TOBACCO', 'ICU']\n",
-    "binary_df = raw_data[binary_columns]\n"
+    "                  'INMSUPR', 'HIPERTENSION', 'OTHER_DISEASE', 'CARDIOVASCULAR','OBESITY','RENAL_CHRONIC', 'TOBACCO', 'ICU']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "969f9c7d",
    "metadata": {},
    "outputs": [],
@@ -668,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "09f34452",
    "metadata": {},
    "outputs": [
@@ -751,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "74cab373",
    "metadata": {},
    "outputs": [
@@ -915,17 +914,18 @@
        "ICU                   856032  81.637651"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# there are three numbers needs to be replaced with NA: 97, 98, 99\n",
+    "# there are three numbers needs to be replaced with NA: 97, 98, 99; and it is reseaonalble if we replace them with their mode\n",
     "values_to_replace = [97, 98, 99]\n",
     "for col in binary_columns:\n",
     "    raw_data[col].replace(values_to_replace, pd.NA, inplace=True)\n",
     "\n",
+    "# looking for the percentage of missing values\n",
     "missing = pd.concat([raw_data.isnull().sum(), 100 * raw_data.isnull().mean()], axis=1)\n",
     "missing.columns=['count', '%']\n",
     "missing.sort_values(by=['count', '%'])"
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "7e0d10e8",
    "metadata": {},
    "outputs": [
@@ -1111,7 +1111,7 @@
        "4             0       0                     3  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1124,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "69b16bb3",
    "metadata": {},
    "outputs": [
@@ -1162,6 +1162,59 @@
    ],
    "source": [
     "raw_data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "f3e262dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['USMER', 'MEDICAL_UNIT', 'DEATH', 'AGE', 'CLASIFFICATION_FINAL']\n"
+     ]
+    }
+   ],
+   "source": [
+    "other_columns = []\n",
+    "for col in raw_data.columns:\n",
+    "    if col not in binary_columns:\n",
+    "        other_columns.append(col)\n",
+    "print(other_columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "9a217e92",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 1]\n",
+      "[ 1  2  3  4  5  6  7  8  9 10 11 12 13]\n",
+      "[1 0]\n",
+      "[ 65  72  55  53  68  40  64  37  25  38  24  30  48  23  80  61  54  59\n",
+      "  45  26  32  49  39  27  57  20  56  47  50  46  43  28  33  16  62  58\n",
+      "  36  44  66  52  51  35  19  90  34  22  29  14  31  42  15   1   0  17\n",
+      "  41   2  10  12  13   4   7   6   8  60   5  63  75  81  67  18  70  88\n",
+      "  85  92  73  74  78  76  82  77  86  71  95  87  83  84  79  69  89   3\n",
+      "  97  93 100  91  21 103  11   9  94  96 101 107 102  98  99 109 119 116\n",
+      " 105 104 111 114 120 106 108 110 118 117 121 115 113]\n",
+      "[3 5 7 6 1 2 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in other_columns:\n",
+    "    print(raw_data[col].unique())\n",
+    "\n",
+    "# there is no missing values, i.e. 97~99 contains in other columns besides binary columns"
    ]
   },
   {
