--- a/EDA - Capstone 2.ipynb
+++ b/EDA - Capstone 2.ipynb
@@ -897,37 +897,11 @@
     }
    ],
    "source": [
-    "# create correlation matrix for features\n",
+    "# create correlation matrix for features and filter for the correlation larger than 0.1\n",
     "\n",
     "correlation_matrix = df.corr()\n",
     "plt.figure(figsize=(15,13))\n",
     "p=sns.heatmap(correlation_matrix[(correlation_matrix >= 0.1) | (correlation_matrix <= -0.1)], annot=True, cmap ='Blues')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "4b2be8b7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictive_variable = ['DEATH']\n",
-    "explantory_variable = [col for col in df.columns if col is not df['DEATH']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "98d41ff5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "correlation_dict = []\n",
-    "for col in explantory_variable:\n",
-    "    correlation = df['DEATH'].corr(df[col])\n",
-    "    correlation_dict.append(correlation)\n",
-    "\n",
-    "correlation_dict = pd.Series(correlation_dict, index = explantory_variable)"
    ]
   },
   {
@@ -965,7 +939,17 @@
    "source": [
     "# creat a table of correlation between features and column Death\n",
     "\n",
+    "predictive_variable = ['DEATH']\n",
+    "explantory_variable = [col for col in df.columns if col is not df['DEATH']]\n",
+    "\n",
+    "correlation_dict = []\n",
+    "for col in explantory_variable:\n",
+    "    correlation = df['DEATH'].corr(df[col])\n",
+    "    correlation_dict.append(correlation)\n",
+    "\n",
+    "correlation_dict = pd.Series(correlation_dict, index = explantory_variable)\n",
     "correlation = pd.DataFrame(correlation_dict, index = explantory_variable, columns = predictive_variable)\n",
+    "\n",
     "print(correlation)"
    ]
   },
@@ -975,7 +959,7 @@
    "metadata": {},
    "source": [
     "# Summary:\n",
-    "Age emerges as a crucial factor influencing COVID-19 mortality (p = 0.0). Individuals classified as 2 after testing exhibit a higher risk of death. Examining the correlation table reveals that individuals with pneumonia (correlation = 0.47) or those hospitalized ('PATIENT_TYPE', correlation = -0.51) experience an elevated likelihood of death. Conversely, tobacco use (correlation = 0.005) and asthma (correlation = 0.018) appear to be the least significant factors, suggesting they could be considered for removal if needed."
+    "Results from chi-square test shows that all features are singnificant factors for death prediction. Age emerges as a crucial factor influencing COVID-19 mortality (p = 0.0). Individuals classified as 2 after testing exhibit a higher risk of death. Examining the correlation table reveals that individuals with pneumonia (correlation = 0.47) or those hospitalized ('PATIENT_TYPE', correlation = -0.51) experience an elevated likelihood of death. Tobacco use (correlation = 0.005) and asthma (correlation = 0.018) appear to be the least linearly related to mortality."
    ]
   }
  ],
